[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "akshay-joseph-jimmy",email = "akshayjosephjimmy05@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "supabase (>=2.28.3,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "clerk-backend-api (>=5.0.6,<6.0.0)",
    "boto3 (>=1.43.18,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "langchain (==0.3.27)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
