[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    "akshay-joseph-jimmy <akshayjosephjimmy05@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.135.3,<0.136.0"
uvicorn = ">=0.44.0,<0.45.0"
supabase = ">=2.28.3,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
clerk-backend-api = ">=5.0.6,<6.0.0"
boto3 = ">=1.43.18,<2.0.0"
celery = ">=5.6.3,<6.0.0"
redis = ">=8.0.0,<9.0.0"
langchain = ">=0.3.27,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-openai = ">=0.3.28,<0.4.0"
unstructured = {extras = ["all-docs"], version = ">=0.23.1,<0.24.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"